<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AMI NTSensor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_button">Open</string><string name="close_button">Close</string><string name="start_button">Start</string>
    
    
    <string name="stop_button">Stop</string>
    <string name="offset_button">Set Offset</string>
    <string name="nT_name">nT Sensor</string>
    <string name="uT_name">uT Sensor</string>

</resources>
