<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/margin"
    android:orientation="horizontal"
    tools:context=".NTSensorActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStart"
            android:text="@string/start_button"
            android:textColor="@color/dark_blue" />

        <Button
            android:id="@+id/btStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStop"
            android:text="@string/stop_button"
            android:textColor="@color/dark_blue" />

        <Button
            android:id="@+id/btOffset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOffset"
            android:text="@string/offset_button"
            android:textColor="@color/dark_blue" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rd_nt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/nT_name"
                android:textColor="@color/dark_blue" />

            <RadioButton
                android:id="@+id/rd_ut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uT_name"
                android:textColor="@color/dark_blue" />
        </RadioGroup>

        <ScrollView
            android:id="@+id/svText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvSerial"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:typeface="monospace" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/plot_area"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>